--- a/online/03/0317.html
+++ b/online/03/0317.html
@@ -122,11 +122,12 @@ iframe {max-width:100%;  height:720px;}
 									<!-- 1교시 -->
 											<header>
 													<h2><a name="1">1교시:</a>수학</h2>
-<!-- 관련 단원명 --><h3>01. 지수와 유리수</h3>
+<!-- 관련 단원명 --><h3>01. 제곱근과 실수</h3>
 												</header>
 												
-                                                <form name="mc"><p><!-- 핵심 학습 요소를 간략히 기술 -->순환 소수의 규칙성을 알아봅시다.
-                                                    <video src="http://wstr.ebsmath.co.kr/ebsvod/ebsm/M42M1401/M201400001/M201400001_2000K_M00002.mp4" controls="controls"></video><br>
+                                                <form name="mc"><p><!-- 핵심 학습 요소를 간략히 기술 -->수직선 위에 무리수를 나타낼 수 있을까?
+                                                    <video src="
+													https://content-cdn.edunet.net/edudata/content/midd/g3/com/mat/midd_g3_com_mat_21742.mp4" controls="controls"></video><br>
                                                             <input type="button" value="PLAY" onClick="document.getElementsByTagName('video')[0].play();">
                                                             <input type="button" value="PAUSE" onClick="document.getElementsByTagName('video')[0].pause();">
                                                     </form>
@@ -135,12 +136,11 @@ iframe {max-width:100%;  height:720px;}
 									<!-- 2교시 -->
 											<header>
 												<h2><a name="2">2교시:</a>과학</h2>	
-<!-- 관련 단원명 --><h3>01. 물질의 구성</h3>
+<!-- 관련 단원명 --><h3>01. 물질의 변화</h3>
 </header>
 									
-<form name="mc"><p><!-- 핵심 학습 요소를 간략히 기술 -->이온의 형성을 알아 봅시다.
-	<video src="https://content-cdn.edunet.net/edudata/content/midd/g2/com/sci/midd_g2_com_sci_15788.mp4
-	" controls="controls"></video><br>
+<form name="mc"><p><!-- 핵심 학습 요소를 간략히 기술 -->물질의 앙금 생성 반응을 배워 봅시다.
+	<video src="https://content-cdn.edunet.net/edudata/content/midd/g3/com/sci/midd_g3_com_sci_24904.mp4" controls="controls"></video><br>
 			<input type="button" value="PLAY" onClick="document.getElementsByTagName('video')[1].play();">
 			<input type="button" value="PAUSE" onClick="document.getElementsByTagName('video')[1].pause();">
 	</form>
@@ -149,16 +149,11 @@ iframe {max-width:100%;  height:720px;}
 
 									<!-- 3교시 -->
 											<header>
-												<h2><a name="3">3교시:</a>역사</h2>
-<!-- 관련 단원명 --><h3>춘추전국시대와 제자백가</h3>
+												<h2><a name="3">3교시:</a>사회</h2>
+<!-- 관련 단원명 --><h3>인권이란 무엇인가</h3>
 											</header>
-<!-- 핵심 학습 요소를 간략히 기술 --><p>제자백가 중 도가에 대해 알아 봅시다.<br>
-	<p><iframe width="100%" height="720px" src="https://www.youtube.com//embed/t6C51x918Pg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
-	<p><iframe width="100%" height="720px" src="https://www.youtube.com//embed/7DPfQ_M5oEo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
-	<p><iframe width="100%" height="720px" src="https://www.youtube.com//embed/g3-ZFxMXizo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
-	<p><iframe width="100%" height="720px" src="https://www.youtube.com//embed/q-vgPfX-Uh0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
-
-	
+<!-- 핵심 학습 요소를 간략히 기술 --><r>인터넷에서 <br>'인권'</br>이 무엇인지 검색해 봅시다.<br>
+<a href="https://www.google.com/search?q=%EC%9D%B8%EA%B6%8C&hl=ko&sxsrf=ALeKk01tk46n_oN9iHSx-G5Qkjv5fop4Ig:1584319158870&source=lnms&sa=X&ved=0ahUKEwinjbPl4J3oAhUTzmEKHa7OCFYQ_AUIDSgA" class="button">검색 결과 보기</a>
 
 
 
