--- a/online/03/0317.html
+++ b/online/03/0317.html
@@ -152,9 +152,9 @@ iframe {max-width:100%;  height:720px;}
 												<h2><a name="3">3교시:</a>사회</h2>
 <!-- 관련 단원명 --><h3>인권이란 무엇인가</h3>
 											</header>
-<!-- 핵심 학습 요소를 간략히 기술 --><r>인터넷에서 <br>'인권'</br>이 무엇인지 검색해 봅시다.<br>
+<!-- 핵심 학습 요소를 간략히 기술 --><p>인터넷에서 <b>'인권'</b>이 무엇인지 검색해 봅시다.<br>
 <a href="https://www.google.com/search?q=%EC%9D%B8%EA%B6%8C&hl=ko&sxsrf=ALeKk01tk46n_oN9iHSx-G5Qkjv5fop4Ig:1584319158870&source=lnms&sa=X&ved=0ahUKEwinjbPl4J3oAhUTzmEKHa7OCFYQ_AUIDSgA" class="button">검색 결과 보기</a>
-
+</p>
 
 
 									<!--4교시 -->											
