--- a/online/03/0320.html
+++ b/online/03/0320.html
@@ -140,8 +140,8 @@ iframe {max-width:100%;  height:720px;}
 <!-- 관련 단원명 --><h3>미국의 팽창, 러시아의 근대화 운동 정리</h3>
 											</header>
 									
-	<form name="mc"><p><!-- 핵심 학습 요소를 간략히 기술 -->미국의 팽창과 러시아의 근대화 운동을 정리해 봅시다.
-		<video src="https://content-cdn.edunet.net/edudata/content/midd/g1/com/kor/midd_g1_com_kor_4600.mp4" controls="controls"></video><br>
+	<form name="mc"><p><!-- 핵심 학습 요소를 간략히 기술 -->러시아의 근대화 운동을 정리해 봅시다.
+		<video src="http://goodfms.edunet4u.net/vod2/upload/video/A000800002_20140124/m03so05029a0007.mp4" controls="controls"></video><br>
 				<input type="button" value="PLAY" onClick="document.getElementsByTagName('video')[1].play();">
 				<input type="button" value="PAUSE" onClick="document.getElementsByTagName('video')[1].pause();">
 		</form>
