--- a/online/03/0320.html
+++ b/online/03/0320.html
@@ -137,7 +137,7 @@ iframe {max-width:100%;  height:720px;}
 									<!-- 2교시 -->
 											<header>
 												<h2><a name="2">2교시:</a>역사</h2>	
-<!-- 관련 단원명 --><h3>미국의 팽창, 러시아의 근대화 운동 정리</h3>
+<!-- 관련 단원명 --><h3>01. 산업 혁명과 근대화</h3>
 											</header>
 									
 	<form name="mc"><p><!-- 핵심 학습 요소를 간략히 기술 -->러시아의 근대화 운동을 정리해 봅시다.
