--- a/online/03/0320.html
+++ b/online/03/0320.html
@@ -167,8 +167,8 @@ iframe {max-width:100%;  height:720px;}
 												<h3>코로나19 사회 현상과 영어의 융합 수업</h3>
 											</header>
 												<p>
-												<a href="https://quizlet.com/496427651/match" class="button">코로나19 관련 용어 퀴즈 풀기(1)</a>
-												<a href="https://quizlet.com/496426558/match" class="button">코로나19 관련 용어 퀴즈 풀기(2)</a>
+												<a href="https://quizlet.com/496427651/match" class="button">코로나19 관련 용어 퀴즈 풀기(1)</a><br>
+												<a href="https://quizlet.com/496426558/match" class="button">코로나19 관련 용어 퀴즈 풀기(2)</a><br>
 												<a href="https://quizlet.com/496435049/match" class="button">코로나19 예방 수칙 퀴즈 풀기</a></p>
 
 </article>
