--- a/online/03/0316.html
+++ b/online/03/0316.html
@@ -161,7 +161,7 @@ iframe {max-width:100%;  height:720px;}
 										
 											<header>
 												<h2><a name="4">4교시:</a>음악</h2>
-												<h3>장구 연주하기</h3>
+												<h3>악기 연주하기</h3>
 											</header>
 											<form name="mc"><p>1. 장구의 구조와 기본 지식을 배워 봅시다.
 												<video src="http://content-cdn.edunet.net/edudata/content/com/com/com/spc/com_com_com_spc_14614.mp4" controls="controls"></video>
@@ -170,8 +170,8 @@ iframe {max-width:100%;  height:720px;}
 														<input type="button" value="PAUSE" onClick="document.getElementsByTagName('video')[1].pause();">
 												</form></p>
 																									<p></p>
-																									<form name="mc"><p>2. 장구로 세마치 장단을 연주해 봅시다.
-												<video src="http://content-cdn.edunet.net/edudata/content/com/com/com/spc/com_com_com_spc_14615.mp4" controls="controls"></video>
+																									<form name="mc"><p>2. 우쿨렐레에 대해 배워 봅시다.
+												<video src="https://content-cdn.edunet.net/edudata/content/com/com/com/spc/com_com_com_spc_14624.mp4" controls="controls"></video>
 												
 														<input type="button" value="PLAY" onClick="document.getElementsByTagName('video')[2].play();">
 														<input type="button" value="PAUSE" onClick="document.getElementsByTagName('video')[2].pause();">
