--- a/online/02/0312.html
+++ b/online/02/0312.html
@@ -33,6 +33,11 @@ iframe {max-width:100%;  height:720px;}
 							<ul>
 								<li><a href="#">날짜별 보기</a>
 									<ul>
+										<li><a href="0316.html">3월16일</a></li>
+										<li><a href="0317.html">3월17일</a></li>
+										<li><a href="0318.html">3월18일</a></li>
+										<li><a href="0319.html">3월19일</a></li>
+										<li><a href="0320.html">3월20일</a></li>
 										<li><a href="0309.html">3월9일</a></li>
 										<li><a href="0310.html">3월10일</a></li>
 										<li><a href="0311.html">3월11일</a></li>
@@ -42,8 +47,8 @@ iframe {max-width:100%;  height:720px;}
 								</li>
 								<li><a href="../01/index.html">1학년 보기</a></li>
 								<li class="current"><a href="#">2학년 보기</a></li>
-								<li><a href="../03/index.html">3학년 보기</a></li>
-																<li><a href="#">더 공부하기</a>
+								<li ><a href="../03/index.html">3학년 보기</a></li>
+								<li><a href="#">더 공부하기</a>
 <ul>
 										<li><a href="../edunet.html">수업 자료 검색</a></li>
 										<li><a href="../cls.html">혼자 진도나가기</a></li>
