--- a/online/index.html
+++ b/online/index.html
@@ -59,8 +59,8 @@
 									<div class="row">
 										<div class="12u">
 											<header class="first major">
-											<h2><a href="https://mid.ebs.co.kr" >매일 아침 9시부터 오후 1시까지 EBS 생방송 수업을 꼭 들으세요.</a></h2>
-												<h2>학년을 클릭하여 나오는 과목 링크 주소에 가서 스스로 공부하세요.
+											<h2>1. <a href="https://mid.ebs.co.kr" >매일 아침 9시부터 오후 1시까지 EBS 생방송 수업(클릭)을 꼭 들으세요.</a></h2>
+												<h2>2. 남는 시간엔 학년을 클릭하여 나오는 과목 링크 주소에 가서 스스로 공부하세요.
 											</header>
 										</div>
 									</div>
