--- a/online/index.html
+++ b/online/index.html
@@ -72,7 +72,7 @@
 													<h3>1학년 공부방</h3>
 													<p>어서 와 중학생은 처음이지?</p>
 												</header>
-												<a href="http://school.busanedu.net/common/nttFileDownload.do?fileKey=3d96e48c22293110abafd9fe3118c630" class="image featured"><h3><br>한글 파일로 학습지 받기<br></h3><br></a>
+												<a href="http://school.busanedu.net/common/nttFileDownload.do?fileKey=3d96e48c22293110abafd9fe3118c630" class="image featured"><h3><br>한글 파일로 1학년 학습지 받기<br></h3><br></a>
 											</section>
 
 										</div>
@@ -83,7 +83,7 @@
 													<h3>2학년 공부방</h3>
 													<p>올해부턴 시험도 쳐야 해!</p>
 												</header>
-												<a href="http://school.busanedu.net/common/nttFileDownload.do?fileKey=9720c8de3f81f0eb450d77f3263f3fb3" class="image featured"><h3><br>한글 파일로 학습지 받기<br></h3><br></a>
+												<a href="http://school.busanedu.net/common/nttFileDownload.do?fileKey=9720c8de3f81f0eb450d77f3263f3fb3" class="image featured"><h3><br>한글 파일로 2학년 학습지 받기<br></h3><br></a>
 											</section>
 										</div>
 										<div class="4u 12u(mobile)">
@@ -93,7 +93,7 @@
 													<h3>3학년 공부방</h3>
 													<p>원하는 진로를 꼭 찾길 바라.</p>
 												</header>
-												<a href="http://school.busanedu.net/common/nttFileDownload.do?fileKey=6bac756bda84cf0b455ddff972670dec" class="image featured"><h3><br>한글 파일로 학습지 받기<br></h3><br></a>
+												<a href="http://school.busanedu.net/common/nttFileDownload.do?fileKey=6bac756bda84cf0b455ddff972670dec" class="image featured"><h3><br>한글 파일로 3학년 학습지 받기<br></h3><br></a>
 											</section>
 										</div>
 									</div>
