--- a/html/kakao.html
+++ b/html/kakao.html
@@ -5,17 +5,17 @@
 <meta charset="utf-8"/>
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width"/>
-<title>±èÁß¼ö Ã¤³Î Ãß°¡ Kakao Talk Channel Add Channel Button Demo - Kakao JavaScript SDK</title>
+<title>ê¹€ì¤‘ìˆ˜ ì±„ë„ ì¶”ê°€ Kakao Talk Channel Add Channel Button Demo - Kakao JavaScript SDK</title>
 <body>
 <script src="http://developers.kakao.com/sdk/js/kakao.min.js"></script>
-				<li><img src="../images/ka_ico.png" height="24" style="position:relative; left:00px; top:-4px"> <a href="javascript:void addChannel()"> Ä«Åå Ãß°¡</a></li>
+<div  style="text-align:center;" ><a  href="javascript:void addChannel()"> <img src="../img/ka_ch.png"> <br> ì•„ì´ì½˜ì„ ëˆŒëŸ¬ì„œ ì¹´í†¡ ì¶”ê°€</a></div>
 <script type='text/javascript'>
   //<![CDATA[
-    // »ç¿ëÇÒ ¾ÛÀÇ JavaScript Å°¸¦ ¼³Á¤ÇØ ÁÖ¼¼¿ä.
+    // ì‚¬ìš©í•  ì•±ì˜ JavaScript í‚¤ë¥¼ ì„¤ì •í•´ ì£¼ì„¸ìš”.
     Kakao.init('6090bce394bbe7bf0b3829d689fa673b');
     function addChannel() {
       Kakao.Channel.addChannel({
-        channelPublicId: '_WDsRxb' // Ã¤³Î È¨ URL¿¡ ¸í½ÃµÈ id·Î ¼³Á¤ÇÕ´Ï´Ù.
+        channelPublicId: '_WDsRxb' // ì±„ë„ í™ˆ URLì— ëª…ì‹œëœ idë¡œ ì„¤ì •í•©ë‹ˆë‹¤.
       });
     }
   //]]>
