--- a/html/kakao.html
+++ b/html/kakao.html
@@ -20,5 +20,18 @@
     }
   //]]>
 </script>
+
+<div id="kakao-add-channel-button"></div>
+<script type='text/javascript'>
+  //<![CDATA[
+    // 사용할 앱의 JavaScript 키를 설정해 주세요.
+    Kakao.init('6090bce394bbe7bf0b3829d689fa673b');
+    // 카카오톡 채널 추가 버튼을 생성합니다.
+    Kakao.Channel.createAddChannelButton({
+      container: '#kakao-add-channel-button',
+      channelPublicId: '_WDsRxb' // 채널 홈 URL에 명시된 id로 설정합니다.
+    });
+  //]]>
+</script>
 </body>
 </html>
