--- a/html/kakao.html
+++ b/html/kakao.html
@@ -5,33 +5,14 @@
 <meta charset="utf-8"/>
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width"/>
+<style>
+img{max-width:100%;height:auto}</style>
 <title>김중수 채널 추가 Kakao Talk Channel Add Channel Button Demo - Kakao JavaScript SDK</title>
 <body>
-<div  style="text-align:center;" ><a  href="javascript:void addChannel()"> <img src="../img/ka_ch.png"> <br> 아이콘을 눌러서 카톡 추가</a></div>
-<script type='text/javascript'>
-  //<![CDATA[
-    // 사용할 앱의 JavaScript 키를 설정해 주세요.
-    Kakao.init('6090bce394bbe7bf0b3829d689fa673b');
-    function addChannel() {
-      Kakao.Channel.addChannel({
-        channelPublicId: '_WDsRxb' // 채널 홈 URL에 명시된 id로 설정합니다.
-      });
-    }
-  //]]>
-</script>
-
-<script src="http://developers.kakao.com/sdk/js/kakao.min.js"></script>
-<div id="kakao-add-channel-button"></div>
-<script type='text/javascript'>
-  //<![CDATA[
-    // 사용할 앱의 JavaScript 키를 설정해 주세요.
-    Kakao.init('6090bce394bbe7bf0b3829d689fa673b');
-    // 카카오톡 채널 추가 버튼을 생성합니다.
-    Kakao.Channel.createAddChannelButton({
-      container: '#kakao-add-channel-button',
-      channelPublicId: '_WDsRxb' // 채널 홈 URL에 명시된 id로 설정합니다.
-    });
-  //]]>
-</script>
+<H1>1. 카카오톡 친구탭(가장왼쪽)에서 "검색"을 누른다.</H1><br>
+<img src="../img/ka_ch1.png"><br><br><br>
+<H1>2. 검색창에 "김중수"를 입력하면 아래에 채널 중에 이름이 뜬다.</H1><br>
+<img src="../img/ka_ch1.png"><br><br><br>
+<H1>3. 이름을 눌러 친구 추가하고 질문을 한다. 끝.</H1>
 </body>
 </html>
