--- a/html/talk/index.html
+++ b/html/talk/index.html
@@ -6,7 +6,7 @@
 <title>김중수와 채팅하기</title>
 </head>
 <body>
-  <h1>말을 걸어 주세요.</h1>
+  <h1>말을 걸어 주세요</h1>
 <!--Start of Tawk.to Script-->
 <script type="text/javascript">
 var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
