--- a/html/chat/index.html
+++ b/html/chat/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <h1>오른쪽 아래의 녹색 아이콘을 눌러 채팅을 시작하세요.</h1>
+  <h1><a href=" https://play.google.com/store/apps/details?id=to.tawk.android">앱</a></h1>
 <!--Start of Tawk.to Script-->
 <script type="text/javascript">
 var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
