--- a/html/chat/index.html
+++ b/html/chat/index.html
@@ -6,9 +6,8 @@
 <title>김중수 채팅방</title>
 </head>
 <body>
-  <h1>오른쪽 아래의 녹색 아이콘을 눌러 채팅을 시작하세요.</h1>
-  <h1><a href=" https://play.google.com/store/apps/details?id=to.tawk.android">앱</a></h1>
-<!--Start of Tawk.to Script-->
+  <h1>김중수에게 할 말이 있는 사람은 오른쪽 아래의 녹색 아이콘을 눌러 채팅을 시작하세요. 브라우저를 닫으면 채팅이 사라지지만 언제라도 다시 채팅할 수 있음.</h1>
+  <!--Start of Tawk.to Script-->
 <script type="text/javascript">
 var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
 (function(){
