--- a/html/wa/index.html
+++ b/html/wa/index.html
@@ -37,5 +37,10 @@ video {
 <p><video src="wa11s_cf.mp4" poster="" preload="metadata" controls="controls"   height="auto"></video></p>
 <p>You are the one you've been waiting for  부분에서 the 를 [디]로 발음합니다. 이것은 'ㅝ'의 'ㅜ'를 모음으로 인식하는 한국인의 언어 습관이 반영된 결과라고 하겠습니다. 즉, 한국인 모국어 화자는 'ㅝ'를 여전히 '하나의 모음'으로 인식하며 그 때문에 지금 수능교재를 접하는 교사와 학생들이 혼란스러운 것입니다.</p>
 <p style='color:#808080;'> * 다만, 영어 공부를 해 보신 분들은 알겠지만, 미국인들도 뒤에 나오는 단어를 강조할 때에는 그 단어가 자음이냐 모음이냐 상관없이 the 를 [디]라고 발음하는 경우가 있습니다.</p>
+<p>근데 이게 이렇게 깔끔하게 설명이 안 되는 이유는 다음과 같은 예들 때문입니다.</p>      
+<p>(3) 주+어 → 줘 : 반모음화</p>
+<p>(4) 보+이다 →  뵈다 : 단모음화?</p>
+<p>(5) 되+어 → 돼 : ???</p>
+<p>모국어 화자의 직관으로는 모음으로 끝나는 용언 어간 뒤에 모음이 이어지는 다 같은 상황인데 그걸 학문적으로는 다른 현상이라고 설명하니까 직관에 부합하지 않는 거죠.</p>      
       </body>
 </html>
