--- a/html/wa/index.html
+++ b/html/wa/index.html
@@ -32,7 +32,7 @@ video {
 <p>You are the answer 부분에서 the 는 [디]로 발음합니다. 왜냐하면 answer 의 'a'가 모음이기 때문입니다.  the 는 자음 앞에서는 [더]로 발음하고 모음 앞에서는 [디]로 발음합니다. </p>
 <p>같은 노래의 뒷부분을 들어봅시다. 다음 영상의 12초 부분을 보세요.</p>
 <p><video src="wa11s.mp4" poster="" preload="metadata" controls="controls"   height="auto"></video></p>
-<p>You are the one you've been waiting for 부분에서 the 는 [더]로 발음합니다. 이것은 one 의 [원]에서 음가 없는 'ㅇ'을 제외한 'ㅝ'가 '모음으로 시작하지 않는다'는 증거입니다.  the 는 자음 앞에서는 [더]로 발음하고 모음 앞에서는 [디]로 발음하는데, 'ㅝ' 앞에서 [더]로 발음한다는 것은, 본모음 'ㅓ'앞이 반모음 'ㅜ'가 모음이 아니라 자음이라는 뜻입니다. 사실 언어학적으로 '반모음=반자음' 이 둘을 같은 말입니다. 그러니 &quot;보아&gt;봐&quot; 에서  ㅗ → w 가 될 때 'ㅗ'라는 모음이 'w'라는 자음(반자음)으로 바뀌는 부분에 주목하게 되는 것이 당연한 이치이며, 축약된 음절보다는, 모음이 자음으로 바뀌는 '교체'를 중심으로 이 현상을 보아야 하는 것입니다.</p>
+<p>You are the one you've been waiting for 부분에서 the 는 [더]로 발음합니다. 이것은 one 의 [원]에서 음가 없는 'ㅇ'을 제외한 'ㅝ'가 '모음으로 시작하지 않는다'는 증거입니다.  the 는 자음 앞에서는 [더]로 발음하고 모음 앞에서는 [디]로 발음하는데, 'ㅝ' 앞에서 [더]로 발음한다는 것은, 본모음 'ㅓ'앞이 반모음 'ㅜ'가 모음이 아니라 자음이라는 뜻입니다. 사실 언어학적으로 '반모음=반자음' 이 둘은 같은 말입니다. 그러니 &quot;보아&gt;봐&quot; 에서  ㅗ → w 가 될 때 'ㅗ'라는 모음이 'w'라는 자음(반자음)으로 바뀌는 부분에 주목하게 되는 것이 당연한 이치이며, 축약된 음절보다는, 모음이 자음으로 바뀌는 '교체'를 중심으로 이 현상을 보아야 하는 것입니다.</p>
 <p> 비교를 위해 &quot;Show yourself&quot;를 한국인이 커버해서 부른 노래를 들어 보세요.  다음 영상의 12초 부분을 보세요.</p>
 <p><video src="wa11s_cf.mp4" poster="" preload="metadata" controls="controls"   height="auto"></video></p>
 <p>You are the one you've been waiting for  부분에서 the 를 [디]로 발음합니다. 이것은 'ㅝ'의 'ㅜ'를 모음으로 인식하는 한국인의 언어 습관이 반영된 결과라고 하겠습니다. 즉, 한국인 모국어 화자는 'ㅝ'를 여전히 '하나의 모음'으로 인식하며 그 때문에 지금 수능교재를 접하는 교사와 학생들이 혼란스러운 것입니다.</p>
