--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 
 <head><title>XFN 1.1 profile</title>
-<meta http-equiv="refresh" content="0;url=http://zipnumsa.github.io/online/index.html">
+<meta http-equiv="refresh" content="30;url=http://zipnumsa.github.io/online/index.html">
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
@@ -51,6 +51,7 @@ h2 a { display:block; margin-left:2em }
 <body>
 	
 <h1>감천중학교 가정학습 페이지로 이동합니다.</h1>
+	<a href="https://zipnumsa.github.io/html/si/gal1.html">test</a>
 <!-- 접속통계 MyLog 삽입코드 -->
 <SCRIPT LANGUAGE="JavaScript">
 <!--
