--- a/html/si/gal1.html
+++ b/html/si/gal1.html
@@ -18,14 +18,14 @@
         left: 0%;
         top: 10%;
         width: 100%;
-        height: 80%;
+        height: 100%;
         background: #000;
         overflow: hidden;
     }
     #slider {
         position: absolute;
         width: 100%;
-        height: 80%;
+        height: 10	0%;
     }
     #slider img {
         border: none;
@@ -282,10 +282,3 @@ onresize = diapo.resize;
 
 </body>
 </html>
-
-
-좋아요공감
-공유하기글 요소
-
-
-출처: https://sugame.tistory.com/256 [프로그래밍 저장소]
