--- a/html/si/gal1.html
+++ b/html/si/gal1.html
@@ -25,7 +25,7 @@
     #slider {
         position: absolute;
         width: 100%;
-        height: 10	0%;
+        height: 80%;
     }
     #slider img {
         border: none;
