--- a/html/si/gal1.html
+++ b/html/si/gal1.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>http://www.blueb.co.kr</title>
+<title>½Ã ÇØ¼³</title>
 <style type="text/css">
     html {
         overflow: hidden;
