--- a/html/si/gal2.html
+++ b/html/si/gal2.html
@@ -1,121 +1,81 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
- <meta charset="UTF-8">
+<!doctype html>
+<html lang="ko">
+<head>
+ <meta charset="utf-8">
+ <title>HTML5</title>
+ <link href='http://api.mobilis.co.kr/webfonts/css/?fontface=NanumGothicWeb'
+        rel='stylesheet'>
  <style>
-  .gallery{ overflow: hidden; }
+  body { font-family: 'NanumGothicWeb'; }
+  #gallery{
+  border:10px solid #1d0c16;
+  height:300px;
+  width:450px;
+  margin-left:auto;
+  margin-right:auto;
+  overflow:visible;
+  background:#272229;
+  -webkit-box-shadow:#272229 10px 10px 20px;
+  -moz-box-shadow:#272229 10px 10px 20px;
+  box-shadow:#272229 10px 10px 30px;
+  }
 
+  #gallery ul{margin-left:-30px;}
 
+  #gallery ul li{
+  list-style-type:none;
+  display:inline-table;
+  padding:10px;
+  }
 
-  /* 갤러리 이미지 */
-  .gallery img{ position:absolute; visibility:hidden; top:0px; left:0px; width:100% }
-  .gallery img.active{ visibility:visible; }
+  #gallery ul li .pic{
+  -webkit-transition: all 0.6s ease-in-out;
+  opacity:0;
+  visibility:hidden;
+  position:absolute;
+  margin-top:10px;
+  margin-left:-20px;
+  border:1px solid black;
+  -webkit-box-shadow:#272229 2px 2px 10px;
+  -moz-box-shadow:#272229 2px 2px 10px;
+  box-shadow:#272229 2px 2px 10px;
+  }
 
-​
+  #gallery ul li .small:hover{cursor:pointer;}
 
-  /* 이전/다음 사진 보여주기 클릭 영역 */
-  .gallery .left{ position:absolute; top:0px; left:0px; width:20%; height:100%; }
-  .gallery .right{ position:absolute; top:0px; left:80%; width:20%; height:100%; }
-
-​
-
-  /* 이전/다음 사진 보여주기 클릭 영역 hover 시 보여지는 좌/우 화살표 이미지 */
-  .gallery .left .left_btn{ position:absolute; width: 0; height: 0; left: 20%; top:50%; margin-top: -10px; visibility:hidden;
-   border-right: 10px solid white; border-top: 10px solid transparent; border-bottom: 10px solid transparent; }
-  .gallery .right .right_btn{ position:absolute; width: 0; height: 0; right: 20%; top:50%; margin-top: -10px; visibility:hidden;
-   border-left: 10px solid white; border-top: 10px solid transparent; border-bottom: 10px solid transparent; }
-  .gallery .left:hover .left_btn{ visibility:visible; }
-  .gallery .right:hover .right_btn{ visibility:visible; }
-  img {max-width:100%;height:auto}
+  #gallery ul li:hover .pic{
+  width:540px;
+  height:762px;
+  opacity:1;
+  visibility:visible;
+  float:right;
+  }
  </style>
- <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
- <script>
-  (function($){
-   $.fn.gallery = function(options) {
-
-    var $this = $(this);
-    var $arrImage = $this.children("img");
-    var iGalleryIndex = 0, iGalleryCount = $arrImage.length;
-
-
-
-    // 현재 선택된 이미지를 보여준다.
-    function ShowImage(){
-     $arrImage.each( function(index){
-      if( iGalleryIndex == index ){
-       $(this).addClass("active");
-      }
-      else{
-       $(this).removeClass("active");
-      }
-     });
-    }
-
-
-
-    // 이전 버튼 영역 클릭시, 이전 사진을 보여준다.
-    $this.children(".left").click( function(){
-     --iGalleryIndex;
-     if( iGalleryIndex < 0 ) iGalleryIndex = iGalleryCount - 1;
-     ShowImage();
-    });
-
-
-
-    // 다음 버튼 영역 클릭시, 다음 사진을 보여준다.
-    $this.children(".right").click( function(){
-     ++iGalleryIndex;
-     if( iGalleryIndex >= iGalleryCount ) iGalleryIndex = 0;
-     ShowImage();
-    });
-
-
-
-    ShowImage();
-
-​
-
-    return this;
-   };
-  }(jQuery));
-
-
-
-  $( document ).ready( function()
-  {
-   $(".gallery" ).gallery();
-  } );
- </script>
+ <!--[if IE]>
+ <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+ <![endif]-->
 </head>
 <body>
-<!-- 사진에 적합하게 width, height 를 설정해야 한다. -->
-<div class="gallery" style="position: relative; width:1075px; height: 1517px;">
- <img src="./img/si001.jpg">
- <img src="./img/si002.jpg">
- <img src="./img/si003.jpg">
- <img src="./img/si004.jpg">
- <img src="./img/si005.jpg">
- <img src="./img/si006.jpg">
- <img src="./img/si007.jpg">
- <img src="./img/si008.jpg">
- <img src="./img/si009.jpg">
- <img src="./img/si010.jpg">
-<img src="./img/si011.jpg">
-<img src="./img/si012.jpg">
+ <div id="gallery">
+  <ul>
+   <li><img src="./img/si001.jpg" width="120" height="90" border="0" alt="" class="small"><img src="./img/si001.jpg" border="0" alt="" class="pic"></li>
+<li><img src="./img/si002.jpg" width="120" height="90" border="0" alt="" class="small"><img src="./img/si002.jpg" border="0" alt="" class="pic"></li>
+<li><img src="./img/si003.jpg" width="120" height="90" border="0" alt="" class="small"><img src="./img/si003.jpg" border="0" alt="" class="pic"></li>
+<li><img src="./img/si004.jpg" width="120" height="90" border="0" alt="" class="small"><img src="./img/si004.jpg" border="0" alt="" class="pic"></li>
+<li><img src="./img/si005.jpg" width="120" height="90" border="0" alt="" class="small"><img src="./img/si005.jpg" border="0" alt="" class="pic"></li>
+<li><img src="./img/si006.jpg" width="120" height="90" border="0" alt="" class="small"><img src="./img/si006.jpg" border="0" alt="" class="pic"></li>
+<li><img src="./img/si007.jpg" width="120" height="90" border="0" alt="" class="small"><img src="./img/si007.jpg" border="0" alt="" class="pic"></li>
+<li><img src="./img/si008.jpg" width="120" height="90" border="0" alt="" class="small"><img src="./img/si008.jpg" border="0" alt="" class="pic"></li>
+<li><img src="./img/si009.jpg" width="120" height="90" border="0" alt="" class="small"><img src="./img/si009.jpg" border="0" alt="" class="pic"></li>
+<li><img src="./img/si010.jpg" width="120" height="90" border="0" alt="" class="small"><img src="./img/si010.jpg" border="0" alt="" class="pic"></li>
+<li><img src="./img/si011.jpg" width="120" height="90" border="0" alt="" class="small"><img src="./img/si011.jpg" border="0" alt="" class="pic"></li>
+<li><img src="./img/si012.jpg" width="120" height="90" border="0" alt="" class="small"><img src="./img/si012.jpg" border="0" alt="" class="pic"></li>
+<li><img src="./img/si013.jpg" width="120" height="90" border="0" alt="" class="small"><img src="./img/si013.jpg" border="0" alt="" class="pic"></li>
+<li><img src="./img/si014.jpg" width="120" height="90" border="0" alt="" class="small"><img src="./img/si014.jpg" border="0" alt="" class="pic"></li>
+<li><img src="./img/si015.jpg" width="120" height="90" border="0" alt="" class="small"><img src="./img/si015.jpg" border="0" alt="" class="pic"></li>
+<li><img src="./img/si016.jpg" width="120" height="90" border="0" alt="" class="small"><img src="./img/si016.jpg" border="0" alt="" class="pic"></li>
 
-​
-
- <!-- 이전 사진 보여주기 클릭 영역 -->
- <div class="left">
-  <div class="left_btn"></div>
+  </ul>
  </div>
-
- 
-
-<!-- 다음 사진 보여주기 클릭 영역 -->
- <div class="right">
-  <div class="right_btn"></div>
- </div>
-</div>
 </body>
-</html> 
+</html>
