--- a/html/si/index.html
+++ b/html/si/index.html
@@ -2,7 +2,7 @@
 <html lang="pl">
     <head>
         <meta charset="utf-8">
-        <title>Mini Lightbox</title>
+        <title>시 해설</title>
         <meta name="description" content="Prosty lightbox do wyswietlania zdjec w wiekszym rozmiarze, bez uzycia jQuery, bardzo lekki">
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="css/main.css">
@@ -11,13 +11,13 @@
     <body>
         <header>
             <h1>
-                Mini Lightbox
+                시 해설 쓰기
             </h1>
         </header>
         <main>
             <section>
                 <h2>
-                    Galeria
+                    다음 중에서 3편 이상 고르세요.
                 </h2>
                 <ul>
                     <li>
