--- a/html/si/simom/index.html
+++ b/html/si/simom/index.html
@@ -4,10 +4,10 @@
 
 	var img = new Array();
 
-	//±×¸² °³¼ö - ¿ª½Ã ÃÑ °³¼öº¸´Ù 1ÀÛ°Ô
+	//ê·¸ë¦¼ ê°œìˆ˜ - ì—­ì‹œ ì´ ê°œìˆ˜ë³´ë‹¤ 1ìž‘ê²Œ
 	var mx=88;	
 
-	//±×¸²È­ÀÏ¸íÀÌ ¿¬¼ÓµÇ´Â ¼ýÀÚÀÏ°æ¿ì ÀÚµ¿À¸·Î..
+	//ê·¸ë¦¼í™”ì¼ëª…ì´ ì—°ì†ë˜ëŠ” ìˆ«ìžì¼ê²½ìš° ìžë™ìœ¼ë¡œ..
 	for (i=0;i<mx+1;i++) {
 		img[i]=i+'.jpg';
 	}
@@ -39,7 +39,7 @@
 
 	}
 
-//¿ìÅ¬¸¯½Ã ÀÌÀü±×¸² º¸±â
+//ìš°í´ë¦­ì‹œ ì´ì „ê·¸ë¦¼ ë³´ê¸°
 function ms() { 
 	if ((event.button==2) || (event.button==3)) { 
 		ck(0); 
@@ -49,11 +49,11 @@ document.onmousedown=ms;
 
 </script>
 <form name=f>
-<a onClick=ck(2)>Ã³À½</a> <a onClick=ck(0)>ÀÌÀü</a> <a onClick=ck(1)>´ÙÀ½</a> <a onClick=ck(3)>¸Ç³¡</a>
+<a onClick=ck(2)>ì²˜ìŒ</a> <a onClick=ck(0)>ì´ì „</a> <a onClick=ck(1)>ë‹¤ìŒ</a> <a onClick=ck(3)>ë§¨ë</a>
 <input type=text size=2 name=t2 style='border:0'><br>
-<img name=i value=0 src="0.jpg" border=0 title="Å¬¸¯ÇÏ½Ã¸é ´ÙÀ½ ½Ã°¡ ³ª¿À¸ç, ¿À¸¥ÂÊ Å¬¸¯ÇÏ½Ã¸é ÀÌÀü ½Ã°¡ ³ª¿É´Ï´Ù." onClick="ck(1)"  hspace=5>
+<img name=i value=0 src="0.jpg" border=0 title="í´ë¦­í•˜ì‹œë©´ ë‹¤ìŒ ì‹œê°€ ë‚˜ì˜¤ë©°, ì˜¤ë¥¸ìª½ í´ë¦­í•˜ì‹œë©´ ì´ì „ ì‹œê°€ ë‚˜ì˜µë‹ˆë‹¤." onClick="ck(1)"  hspace=5>
 <br clear=all>
 <textarea style='border:0' cols=80 rows=5 name=t>
-½Ã¸¦ Å¬¸¯ÇÏ¸é ´ÙÀ½ ½Ã°¡ ³ª¿É´Ï´Ù.
+ì‹œë¥¼ í´ë¦­í•˜ë©´ ë‹¤ìŒ ì‹œê°€ ë‚˜ì˜µë‹ˆë‹¤.
 </textarea><p>
 </form>
