--- a/html/si/simom/index.html
+++ b/html/si/simom/index.html
@@ -1,3 +1,7 @@
+<html lang="ko">
+<head>
+	<meta charset="utf-8">
+	</head>
 <body oncontextmenu='return false' ondragstart='return false' onselectstart='return false' >
 <script>
 	var n=0;
@@ -57,3 +61,5 @@ document.onmousedown=ms;
 시를 클릭하면 다음 시가 나옵니다.
 </textarea><p>
 </form>
+</body>
+</html>
