--- a/html/si/index.html
+++ b/html/si/index.html
@@ -4,6 +4,7 @@
 	<style>
 	a{font-size:40pt}
 	img{max-width:100%;height:auto}
+	input{font-size:40pt}
 	</style>
 	</head>
 <body oncontextmenu='return false' ondragstart='return false' onselectstart='return false' >
@@ -58,7 +59,7 @@ document.onmousedown=ms;
 </script>
 <form name=f>
 시를 누르면 다음 시가 나타납니다. 다른 시를 보려면 아래의 단추를 이용하세요.<br>
-<a onClick=ck(2)>처음</a> | <a onClick=ck(0)>이전</a> | <a onClick=ck(1)>다음</a> | <a onClick=ck(3)>맨끝</a><br>
+<a onClick=ck(2)>처음</a> ||||||||| <a onClick=ck(0)>이전</a> ||||||||| <a onClick=ck(1)>다음</a> ||||||||| <a onClick=ck(3)>맨끝</a><br>
 <img name=i value=0 src="0.jpg" border=1 onClick="ck(1)"  hspace=5>
 <br clear=all>
 시 번호를 기억해 두시면 도움이 됩니다→ <input type=text size=2 name=t2 style='border:0'><br>
