--- a/html/si/index.html
+++ b/html/si/index.html
@@ -58,8 +58,8 @@ document.onmousedown=ms;
 
 </script>
 <form name=f>
-<center>시를 누르면 다음 시가 나타납니다. 다른 시를 보려면 아래의 단추를 이용하세요.<br>
-<a onClick=ck(2)>처음</a> ||||||||| <a onClick=ck(0)>이전</a> ||||||||| <a onClick=ck(1)>다음</a> ||||||||| <a onClick=ck(3)>맨끝</a><br>
+<center><h2>시를 누르면 다음 시가 나타납니다. 다른 시를 보려면 아래의 단추를 이용하세요.</h2>
+<a onClick=ck(2)>처음</a> ||||||||||||||||||  <a onClick=ck(0)>이전</a> ||||||||||||||||||  <a onClick=ck(1)>다음</a> ||||||||||||||||||  <a onClick=ck(3)>맨끝</a><br>
 <img name=i value=0 src="0.jpg" border=0 onClick="ck(1)" >
 <br clear=all>
 시 번호를 기억해 두시면 도움이 됩니다→ <input type=text size=2 name=t2 style='border:0'></center>
